# carnot-assignment

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
